Add parts and labor

--- a/app/themes/mission-control/assets/sass/main/main.scss
+++ b/app/themes/mission-control/assets/sass/main/main.scss
@@ -5,9 +5,8 @@
 // =============================================================================
 
 @charset 'UTF-8';
-@import '../../../node_modules/sanitize.css/sanitize';                     // Sanitize
-@import '../../../node_modules/bourbon/app/assets/stylesheets/bourbon.scss';   // Bourbon
-@import '../../../node_modules/bourbon-neat/app/assets/stylesheets/neat.scss'; // Neat
+@import '../../../node_modules/sanitize.css/sanitize.css';        // Sanitize
+@import '../../../node_modules/partsandlabor/partsandlabor.scss'; // Parts and Labor
 
 // THEME STYLES
 // =============================================================================
