--- a/app/themes/mission-control/assets/sass/partials/utilities/variables/_var-fonts.scss
+++ b/app/themes/mission-control/assets/sass/partials/utilities/variables/_var-fonts.scss
@@ -4,10 +4,10 @@
 // Fonts
 // =============================================================================
 
-$serif:             $georgia;
-$sans:						  $helvetica;
-$serif-alt:         $serif;
-$sans-alt:          $sans;
+// $serif:             $georgia;
+// $sans:						  $helvetica;
+// $serif-alt:         $serif;
+// $sans-alt:          $sans;
 $base-font-family:  $sans;
 
 // Font Sizes
