--- a/app/themes/mission-control/assets/sass/partials/utilities/mixins/_mix-scaffolding.scss
+++ b/app/themes/mission-control/assets/sass/partials/utilities/mixins/_mix-scaffolding.scss
@@ -4,28 +4,28 @@
 // GRID
 // ============================================================
 
-// Container
-@mixin base-container($mobile-container-width: 90%) {
-  @include outer-container($mobile-container-width);
+// // Container
+// @mixin base-container($mobile-container-width: 90%) {
+//   @include outer-container($mobile-container-width);
 
-  @include media($small) {
-    @include outer-container($small-container);
-  };
+//   @include break($small) {
+//     @include outer-container($small-container);
+//   };
 
-  @include media($medium) {
-    @include outer-container($medium-container);
-  };
+//   @include break($medium) {
+//     @include outer-container($medium-container);
+//   };
 
-  @include media($large) {
-    @include outer-container($large-container);
-  };
-}
+//   @include break($large) {
+//     @include outer-container($large-container);
+//   };
+// }
 
-// Omega Reset (http://www.joshfry.me/blog/2013/05/13/omega-reset-for-bourbon-neat)
-@mixin omega-reset($nth) {
-  &:nth-child(#{$nth}) { margin-right: flex-gutter(); }
-  &:nth-child(#{$nth}+1) { clear: none; }
-}
+// // Omega Reset (http://www.joshfry.me/blog/2013/05/13/omega-reset-for-bourbon-neat)
+// @mixin omega-reset($nth) {
+//   &:nth-child(#{$nth}) { margin-right: flex-gutter(); }
+//   &:nth-child(#{$nth}+1) { clear: none; }
+// }
 
 @mixin center-column($span) {
   // Calc Shift
